Improve test suite for PhraseServiceImpl